Add logout feature
added logout feature to all views

Co-authored-by: Elshimaa Betah <ShimaaBetah@users.noreply.github.com>
Co-authored-by: Ahmed Nasser <ahmednasser217217@gmail.com>
Co-authored-by: aboueleyes <ibrahimabouelanin@gmail.com>
Co-authored-by: Mohammad Omar <mohmmadomartaha17@gmail.com>

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,6 +14,16 @@
       text-align: center;
       -webkit-text-stroke: 1px blue;
     }
+a {
+  text-decoration: none !important;
+  color: #ffffff !important;
+}
+
+a:hover {
+  color: #ffffff !important;
+  text-decoration: none !important;
+  cursor: pointer !important;
+}
 
     .container1 {
       position: fixed;
@@ -89,6 +99,9 @@
           Search
         </button>
       </form>
+          <a class="nav-link active" aria-current="page" href="/logout"
+            ><i class="fas fa-sign-out-alt"></i> Log out</a
+          >
     </div>
   </nav>
   <div class="container1">
