--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -1,75 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <style>
+      body {
+        background-image: url('../images/black-background.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+      }
 
-<head>
-  <style>
-    body {
-      background-image: url('../images/black-background.jpg');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
+      h1 {
+        color: white;
+        text-align: center;
+        -webkit-text-stroke: 1px blue;
+      }
+      a {
+        text-decoration: none !important;
+        color: #ffffff !important;
+      }
 
-    h1 {
-      color: white;
-      text-align: center;
-      -webkit-text-stroke: 1px blue;
-    }
+      a:hover {
+        color: #ffffff !important;
+        text-decoration: none !important;
+        cursor: pointer !important;
+      }
 
-    .cont {
-      position: relative;
-      left: 600px;
-      top: 50px;
-      color: white;
-      -webkit-text-stroke: 0.5px black;
-    }
-  </style>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Results</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-</head>
+      .cont {
+        position: relative;
+        left: 600px;
+        top: 50px;
+        color: white;
+        -webkit-text-stroke: 0.5px black;
+      }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Results</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <a class="navbar-brand" href="/">
-      <i class="fas fa-home"></i>
-      Results
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto"></ul>
-      <!-- TODO: do not accept empty input -->
-      <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="searchTerm" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-          Search
-        </button>
-      </form>
-    </div>
-  </nav>
-  <div class="container">
-    <% if (results.length == 0) {%>
-    <p style="color:white !important">no items found </p>
-    <% }%>
-    <div class="row">
-      <% for (var i = 0; i < results.length; i++) { %>
-      <div class="col-4 p-4">
-        <img id="image" src="../<%=results[i].imageSrc%> " alt="<%=results[i].name%>" width="193" height="300" />
-        <br />
-        <label style="color: #28a745" id="label1" class="ml-4 my-2"><%=results[i].name%></label>
-        <br />
-        <button onclick="location.href = '/product/<%=results[i]._id%>';" id="<%=results[i].name%>" class="btn btn-secondary ml-3">
-          View
-        </button>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+      <a class="navbar-brand" href="/">
+        <i class="fas fa-home"></i>
+        Results
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto"></ul>
+        <!-- TODO: do not accept empty input -->
+        <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            name="searchTerm"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+        <a class="nav-link active" aria-current="page" href="/logout"
+          ><i class="fas fa-sign-out-alt"></i> Log out</a
+        >
       </div>
-      <% } %>
-
+    </nav>
+    <div class="container">
+      <% if (results.length == 0) {%>
+      <p style="color: white !important">no items found</p>
+      <% }%>
+      <div class="row">
+        <% for (var i = 0; i < results.length; i++) { %>
+        <div class="col-4 p-4">
+          <img
+            id="image"
+            src="../<%=results[i].imageSrc%> "
+            alt="<%=results[i].name%>"
+            width="193"
+            height="300"
+          />
+          <br />
+          <label style="color: #28a745" id="label1" class="ml-4 my-2"
+            ><%=results[i].name%></label
+          >
+          <br />
+          <button
+            onclick="location.href = '/product/<%=results[i]._id%>';"
+            id="<%=results[i].name%>"
+            class="btn btn-secondary ml-3"
+          >
+            View
+          </button>
+        </div>
+        <% } %>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
