--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,9 +3,9 @@
   <head>
     <style>
       body {
-        background-image: url('../images/black-background.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
+        background-color: #000000 !important;
       }
 
       h1 {
@@ -52,6 +52,7 @@
         <i class="fas fa-home"></i>
         Cart
       </a>
+
       <button
         class="navbar-toggler"
         type="button"
@@ -78,6 +79,9 @@
             Search
           </button>
         </form>
+        <a class="nav-link active" aria-current="page" href="/logout"
+          ><i class="fas fa-sign-out-alt"></i> Log out</a
+        >
       </div>
     </nav>
     <div class="container main-section">
