--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,105 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <style>
+      body {
+        background-image: url('images/black-background.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+      }
 
-<head>
-  <style>
-    body {
-      background-image: url('images/black-background.jpg');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
+      h1 {
+        color: white;
+        text-align: center;
+        -webkit-text-stroke: 1px blue;
+      }
+      a {
+        text-decoration: none !important;
+        color: #ffffff !important;
+      }
 
-    h1 {
-      color: white;
-      text-align: center;
-      -webkit-text-stroke: 1px blue;
-    }
+      a:hover {
+        color: #ffffff !important;
+        text-decoration: none !important;
+        cursor: pointer !important;
+      }
 
-    .cont {
-      position: relative;
-      left: 600px;
-      top: 50px;
-      color: white;
-      -webkit-text-stroke: 0.5px black;
-    }
+      .cont {
+        position: relative;
+        left: 600px;
+        top: 50px;
+        color: white;
+        -webkit-text-stroke: 0.5px black;
+      }
 
-    .container1 {
-      position: fixed;
-      left: 50px;
-      top: 150px;
-      color: white;
-    }
+      .container1 {
+        position: fixed;
+        left: 50px;
+        top: 150px;
+        color: white;
+      }
 
-    .container2 {
-      position: fixed;
-      left: 200px;
-      top: 150px;
-      color: white;
-    }
+      .container2 {
+        position: fixed;
+        left: 200px;
+        top: 150px;
+        color: white;
+      }
 
-    .container3 {
-      position: fixed;
-      left: 350px;
-      top: 150px;
-      color: white;
-    }
+      .container3 {
+        position: fixed;
+        left: 350px;
+        top: 150px;
+        color: white;
+      }
 
-    .cart {
-      position: fixed;
-      left: 80px;
-      top: 370px;
-    }
-  </style>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Home</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-</head>
+      .cart {
+        position: fixed;
+        left: 80px;
+        top: 370px;
+      }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <a class="navbar-brand" href="/">
-      <i class="fas fa-home"></i>
-      Categories
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto"></ul>
-      <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="searchTerm" type="search" placeholder="Search" aria-label="Search" required/>
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-          Search
-        </button>
-      </form>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+      <a class="navbar-brand" href="/">
+        <i class="fas fa-home"></i>
+        Categories
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto"></ul>
+        <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            name="searchTerm"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+            required
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+        <a class="nav-link active" aria-current="page" href="/logout"
+          ><i class="fas fa-sign-out-alt"></i> Log out</a
+        >
+      </div>
+    </nav>
+    <div
+      class="alert alert-danger"
+      role="alert"
+      style="display: <%=locals.display%>"
+      id="cart-alert"
+    >
+      <i class="fas fa-exclamation-triangle"></i> Item Already in Cart
     </div>
-  </nav>
-  <div class="alert alert-danger" role="alert" style="display: <%=locals.display%>;" id="cart-alert">
-    <i class="fas fa-exclamation-triangle"></i> Item Already in Cart
-  </div>
-  <% locals.app.locals.display = 'none' %>
-  <div class="container">
-    <h1>Welcome <%=userName%></h1>
-  </div>
-  <% for (var i = 0; i < categories.length; i++) {%>
-  <div class="container<%=i+1%>">
-    <img id="image" src="<%= categories[i].imageSrc%> " alt="<%= categories[i].name%>" width="100" height="100" />
-    <br />
-    <label class="ml-4 my-2"><%=categories[i].name%></label>
-    <br />
-    <button onclick="location.href = '/category/<%=categories[i]._id%>';" id="<%=categories[i].name%>" class="btn btn-secondary ml-3">
-      View
-    </button>
-  </div>
-  <% } %>
-  <div class="cart">
-    <button onclick="location.href = '/cart';" id="cart" class="btn btn-secondary ml-3" style="width: 300px">
-      Cart
-    </button>
-  </div>
-</body>
-
+    <% locals.app.locals.display = 'none' %>
+    <div class="container">
+      <h1>Welcome <%=userName%></h1>
+    </div>
+    <% for (var i = 0; i < categories.length; i++) {%>
+    <div class="container<%=i+1%>">
+      <img
+        id="image"
+        src="<%= categories[i].imageSrc%> "
+        alt="<%= categories[i].name%>"
+        width="100"
+        height="100"
+      />
+      <br />
+      <label class="ml-4 my-2"><%=categories[i].name%></label>
+      <br />
+      <button
+        onclick="location.href = '/category/<%=categories[i]._id%>';"
+        id="<%=categories[i].name%>"
+        class="btn btn-secondary ml-3"
+      >
+        View
+      </button>
+    </div>
+    <% } %>
+    <div class="cart">
+      <button
+        onclick="location.href = '/cart';"
+        id="cart"
+        class="btn btn-secondary ml-3"
+        style="width: 300px"
+      >
+        Cart
+      </button>
+    </div>
+  </body>
 </html>
