--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -44,6 +44,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <script src="/scripts/search.js" defer></script>
   </head>
 
   <body>
@@ -73,9 +74,17 @@
             type="search"
             placeholder="Search"
             aria-label="Search"
+            onkeydown="return event.key != 'Enter';"
+            oninput="this.setCustomValidity('')"
+            id="searchInput"
             required
           />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          <button
+            class="btn btn-outline-success my-2 my-sm-0"
+            type="button"
+            onclick="trimSearchTerm(this)"
+            id="searchButton"
+          >
             Search
           </button>
         </form>
