--- a/views/product.ejs
+++ b/views/product.ejs
@@ -80,6 +80,7 @@ a:hover {
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="/scripts/product.js" defer></script>
+  <script src="/scripts/search.js" defer></script>
 </head>
 
 <body>
@@ -93,12 +94,27 @@ a:hover {
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto"></ul>
-      <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="searchTerm" type="search" placeholder="Search" aria-label="Search" required/>
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-          Search
-        </button>
-      </form>
+        <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            name="searchTerm"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+            onkeydown="return event.key != 'Enter';"
+            oninput="this.setCustomValidity('')"
+            id="searchInput"
+            required
+          />
+          <button
+            class="btn btn-outline-success my-2 my-sm-0"
+            type="button"
+            onclick="trimSearchTerm(this)"
+            id="searchButton"
+          >
+            Search
+          </button>
+        </form>
           <a class="nav-link active" aria-current="page" href="/logout"
             ><i class="fas fa-sign-out-alt"></i> Log out</a
           >
